--- a/mortgageCalculator.html
+++ b/mortgageCalculator.html
@@ -20,22 +20,54 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="basicCalculator.html">Basic Calcuator</a>
+                    <a class="nav-link " href="basicCalculator.html">Basic Calcuator</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="mortgageCalculator.html">Mortgage Calculator</a>
+                    <a class="nav-link active" href="mortgageCalculator.html">Mortgage Calculator</a>
                 </li>
             </ul>
         </div>
     </div>
+
     </nav>
+   <div >
+    APR%: <input type="text" id="apr"
+    placeholder="%">
+    </div>
+    <div>
+        Loan Term: <input type="text" id="trm"
+        placeholder=" Ex: 10">
+    </div>
+    <div>
+        Loan Amount: <input type="text" id="amt"
+        placeholder="$">
+    </div>
+    <div>
+        <button type="button" id="calcBtn">Calculate</button>
+    </div>
+
+    <div>
+        Answer: <input type="text" id="answerField" readonly>
+    </div>
+
+
+
+
+
+
+
+
+   </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+         <!-- link basicCal.js -->
+         <script src=" scripts/mortgageCalc.js"></script>
 </body>
 
 </html>
